<resources>
    <string name="app_name">Fishing System GS</string>
    <string name="first_decimal">First Decimal</string>
    <string name="second_decimal">Second Decimal</string>
    <string name="add_mother">Add PGR</string>
    <string name="add">Add</string>
    <string name="third_decimal">PGR</string>
    <string name="view_pgr">View PGR</string>
    <string name="pgr_count">PGR Counter</string>
    <string name="ts_count">TS Counter</string>
    <string name="add_ts">Add TS</string>
    <string name="ts_name">Type TS Name (Decimal of this PGR is appended to the end automatically)</string>
    <string name="ts">TS</string>
    <string name="add_ts_to">Add TS to this PGR</string>
    <string name="shareWith">Share using</string>
    <string name="download">Download Data</string>
    <string name="share_data">Share Data</string>
    <string name="view_tss">View TS</string>
    <string name="delete">Delete</string>
    <string name="download_dir">FishingSystemGS</string>
    <string name="upload">Upload data</string>
    <string name="edit">Edit</string>
    <string name="copy_ts">Copy TS</string>
    <string name="copy_pgr">Copy PGR</string>
    <string name="subtract">Subtract TS</string>
    <string name="subtract1">Subtract</string>
    <string name="copy">Copy</string>
    <string name="first_ts">First TS</string>
    <string name="second_ts">Second TS</string>
    <string name="view_ksv">View KVS</string>
    <string name="add_tsg">Add TSG</string>
    <string name="tsg">TSG</string>
    <string name="type_tsg">Enter the TSG</string>
    <string name="type_kvs">Type the KVS</string>
    <string name="tsg_name">Type the TSG name</string>
    <string name="add_kvs_to">Add KVS to this TSG</string>
    <string name="tsg_count">TSG Counter</string>
    <string name="kvs_count">KVS Counter</string>
    <string name="view_tsg">View TSG</string>
    <string name="admin_key">Admin Panel</string>
    <string name="generate_admin_token">Generate an Admin secret token</string>
    <string name="token_will_appear_here">Token will appear here</string>
    <string name="generate_token">Generate Token</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="copy_token">Copy Token</string>
    <string name="share_token">Share Token</string>
    <string name="submit">Authorize Token</string>
    <string name="enter_your_admin_key">Enter your admin key</string>
    <string name="go_on">Continue</string>
    <string name="delete_admin">To remove an admin, enter the admin\'s token in the text box below and click on the remove the admin button.</string>
    <string name="remove_admin">Remove the Admin</string>
    <string name="connecting_to_cloud_server">Connecting to cloud server...</string>
    <string name="connecting_to_cloud">Connecting to cloud</string>
</resources>