<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/generate_admin_token"
        android:id="@+id/text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text"
        android:textIsSelectable="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/token_will_appear_here"
        android:id="@+id/token"/>

    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/token"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        android:text="@string/copy_token"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/baseline_content_copy_24" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/copy"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        android:text="@string/share_token"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/baseline_share_black_24" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/share"
        android:id="@+id/generate"
        android:textAllCaps="false"
        android:text="@string/generate_token"
        android:textStyle="bold"
        android:textSize="14sp"
        android:typeface="sans"
        android:background="@drawable/rounded_corner4"
        android:textColor="@color/white" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/generate"
        android:id="@+id/submit"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textSize="14sp"
        android:typeface="sans"
        android:background="@drawable/rounded_corner4"
        android:textColor="@color/white" />


</RelativeLayout>