<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/name"
        android:textSize="18sp"
        android:text="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:gravity="start"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:id="@+id/number"
        android:textSize="20sp"
        android:text="@string/third_decimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:id="@+id/delete"
        android:textColor="@color/purple_700"
        android:text="@string/delete"
        android:drawableTop="@drawable/baseline_delete_24"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_below="@id/delete"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</RelativeLayout>