<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/name"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:text="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:gravity="start"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:id="@+id/number"
        android:textSize="20sp"
        android:text="@string/third_decimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:id="@+id/delete"
        android:textColor="@color/purple_700"
        android:text="@string/delete"
        android:drawableTop="@drawable/baseline_delete_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/delete"
        android:id="@+id/edit"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:text="@string/edit"
        android:drawableTop="@drawable/baseline_edit_24"
        />


    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:drawableTop="@drawable/baseline_content_copy_24"
        android:text="@string/copy_ts"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/copy"
        android:visibility="gone"
        android:id="@+id/house2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="120dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:text="@string/type_kvs"
            android:id="@+id/tsg_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner1"
            android:layout_marginStart="50dp"
            android:layout_below="@id/tsg_name"
            android:id="@+id/text_input_tsg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:id="@+id/kvs_edit"
                android:maxLength="50"
                android:maxLines="1"
                android:background="@drawable/rounded_corner1"
                android:visibility="visible"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/black"
                android:gravity="start|bottom"
                android:autofillHints="@string/type_tsg" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/text_input_tsg"
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_kvs"
            android:textAllCaps="false"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:typeface="sans"
            android:background="@drawable/rounded_corner4"
            android:textColor="@color/white" />

    </RelativeLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_below="@id/house2"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</RelativeLayout>