<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LauncherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:id="@+id/relativeLayout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/text"
            android:textColor="@color/black"
            android:text="@string/enter_your_admin_key"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/text"
            android:id="@+id/admin_key_edit"
            android:background="@drawable/rounded_corner1"
            android:autofillHints="@string/enter_your_admin_key"
            android:inputType="text"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/go_on"
            android:id="@+id/go_on"
            android:textAllCaps="true"
            android:layout_below="@id/admin_key_edit"
            />
    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:id="@+id/progress_bar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar"
        android:id="@+id/connecting"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/connecting_to_cloud_server"
        />


</RelativeLayout>